LPS-67412 Avoid text overflow

--- a/modules/apps/collaboration/message-boards/message-boards-web/src/main/resources/META-INF/resources/message_boards/css/main.scss
+++ b/modules/apps/collaboration/message-boards/message-boards-web/src/main/resources/META-INF/resources/message_boards/css/main.scss
@@ -100,6 +100,8 @@
 	}
 
 	.message-content {
+		word-break: break-all;
+
 		img {
 			max-width: 100%;
 		}
